include/flowi/core/log.h

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

#pragma once

#include <flowi/fl_api.h>
#include <stdbool.h>
#include <stdint.h>
#include <flowi/core/string.h>

#ifdef __cplusplus
extern "C" {
#endif

// Severity of a log message, ordered low to high.
typedef enum FlLogLevel {
    // Most verbose: fine-grained tracing.
    FlLogLevel_Trace = 0,
    // Debugging detail.
    FlLogLevel_Debug = 1,
    // Informational progress.
    FlLogLevel_Info = 2,
    // Recoverable problem / something unexpected.
    FlLogLevel_Warning = 3,
    // Error: an operation failed.
    FlLogLevel_Error = 4,
    // Fatal: unrecoverable.
    FlLogLevel_Fatal = 5,
} FlLogLevel;

// Channel-based logging. Register named channels, gate each by level, then emit
// messages that carry a source file/line and a LogLevel.
// Direct API - hand-written bodies.
// Register a logging channel named name; returns its id.
FL_API uint32_t fl_log_register_channel(FlString name);
// Set the minimum level a channel emits.
FL_API void fl_log_channel_set_level(uint32_t id, FlLogLevel level);
// Enable or disable a channel entirely.
FL_API void fl_log_channel_enable(uint32_t id, bool enabled);
// Log a pre-formatted FlString on a channel (skips printf formatting).
FL_API void fl_log_c_message_formatted(uint32_t id, FlLogLevel level, const char* file, int32_t line, FlString message);
// Globally toggle whether the source file:line is shown in output.
FL_API void fl_log_set_show_location(bool show);
// Initialize file logging under base_dir (empty -> default dir). Returns true on success.
FL_API bool fl_log_file_init(FlString base_dir);
// Shut file logging down, flushing and closing the log file.
FL_API void fl_log_file_shutdown(void);
// Path of the active log file (empty if file logging is off).
FL_API FlString fl_log_file_get_path(void);
// Flush buffered log output.
FL_API void fl_log_flush(void);
// Set the global (channel-less) minimum log level.
FL_API void fl_log_set_level(FlLogLevel level);
// printf-style channel log capturing a source file/line.
FL_API void fl_log_c_message(uint32_t id, FlLogLevel level, const char* file, int32_t line, const char* format, ...);
// printf-style channel-less log.
FL_API void fl_log_message(FlLogLevel level, const char* file, int32_t line, const char* format, ...);


#ifdef __cplusplus
}
#endif