rust/flowi_core_sys/src/generated/log.rs

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

/// Severity of a log message, ordered low to high.
#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum LogLevel {
    /// Most verbose: fine-grained tracing.
    Trace = 0,
    /// Debugging detail.
    Debug = 1,
    /// Informational progress.
    Info = 2,
    /// Recoverable problem / something unexpected.
    Warning = 3,
    /// Error: an operation failed.
    Error = 4,
    /// Fatal: unrecoverable.
    Fatal = 5,
}

const _: () = {
    assert!(core::mem::size_of::<LogLevel>() == 4, "LogLevel size drift");
    assert!(core::mem::align_of::<LogLevel>() == 4, "LogLevel align drift");
};

// Channel-based logging. Register named channels, gate each by level, then emit
// messages that carry a source file/line and a LogLevel.
extern "C" {
    /// Register a logging channel named name; returns its id.
    pub fn fl_log_register_channel(name: crate::RawStr) -> u32;
    /// Set the minimum level a channel emits.
    pub fn fl_log_channel_set_level(id: u32, level: crate::LogLevel);
    /// Enable or disable a channel entirely.
    pub fn fl_log_channel_enable(id: u32, enabled: bool);
    /// Log a pre-formatted FlString on a channel (skips printf formatting).
    pub fn fl_log_c_message_formatted(id: u32, level: crate::LogLevel, file: *const core::ffi::c_char, line: i32, message: crate::RawStr);
    /// Globally toggle whether the source file:line is shown in output.
    pub fn fl_log_set_show_location(show: bool);
    /// Initialize file logging under base_dir (empty -> default dir). Returns true on success.
    pub fn fl_log_file_init(base_dir: crate::RawStr) -> bool;
    /// Shut file logging down, flushing and closing the log file.
    pub fn fl_log_file_shutdown();
    /// Path of the active log file (empty if file logging is off).
    pub fn fl_log_file_get_path() -> crate::RawStr;
    /// Flush buffered log output.
    pub fn fl_log_flush();
    /// Set the global (channel-less) minimum log level.
    pub fn fl_log_set_level(level: crate::LogLevel);
}

